syntax = "proto2";

package server.protobuf.messages;

import "FlightsMessage.proto";

message VoyageManifestStateSnapshotMessage {
    optional string latestFilename__OLD = 1;
    repeated VoyageManifestMessage manifestMessages = 2;
    optional FeedStatusesMessage statuses = 3;
    optional int64 lastProcessedMarker = 4;
}

message VoyageManifestLatestFileNameMessage {
    optional int64 createdAt = 1;
    optional string latestFilename__OLD = 2;
    optional int64 lastProcessedMarker = 3;
}

message VoyageManifestsMessage {
    optional int64 createdAt = 1;
    repeated VoyageManifestMessage manifestMessages = 2;
}

message VoyageManifestMessage {
    optional int64 createdAt = 1;
    optional string eventCode = 2;
    optional string arrivalPortCode = 3;
    optional string departurePortCode = 4;
    optional string voyageNumber = 5;
    optional string carrierCode = 6;
    optional string scheduledDateOfArrival = 7;
    optional string scheduledTimeOfArrival = 8;
    repeated PassengerInfoJsonMessage passengerList = 9;
}

message PassengerInfoJsonMessage {
    optional string documentType = 1;
    optional string documentIssuingCountryCode = 2;
    optional string eeaFlag = 3;
    optional string age = 4;
    optional string disembarkationPortCode = 5;
    optional string inTransitFlag = 6;
    optional string disembarkationPortCountryCode = 7;
    optional string nationalityCountryCode = 8;
    optional string passengerIdentifier = 9;
}
